# kilimo-chatbot

./: .env  README.md  data-limited.json  data.json  streamlit_chat.py  test.py
.streamlit/: config.toml
chatbot/: pyproject.toml
chatbot/chatbot/: main.py  main_MPT.py
env/: pyvenv.cfg
env/Scripts/: activate  activate.bat  dul-receive-pack  dul-upload-pack
my-seaplane-projec/: pyvenv.cfg
pdf-processor/: pyproject.toml
pdf-processor/pdf-processor/: main.py
